[project]
name = "quality-share-pipeline"
version = "0.1.0"
description = "AI Curation Pipeline for Quality Share"
authors = [
    {name = "thakurajayL",email = "thakur.ajay@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.14.1,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
