[project]
name = "quality-share-pipeline"
version = "0.1.0"
description = "AI Curation Pipeline for Quality Share"
authors = [
    {name = "thakurajayL",email = "thakur.ajay@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser (>=6.0.12,<7.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.14.1,<0.15.0)"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"